Rewriten the entire class tree around NormalizedProduct class to Java.